--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<h1>Gitƒ`ƒ…[ƒgƒŠƒAƒ‹</h1>
+<h1>Gitãƒãƒ¥ãƒ¼ãƒˆãƒªã‚¢ãƒ«</h1>
 <p>git status</p>
 <p>git diff</p>
 <p>git commit --amend</p>
+<p>ã‚³ãƒ³ãƒ•ãƒªã‚¯ãƒˆ</p>
